--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "handlebars": "^4.7.7",
     "@fastify/formbody": "^7.0.1",
     "@fastify/static": "^6.5.0",
-    "@fastify/view": "^7.1.0"
+    "@fastify/view": "^7.1.0",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "fs": "^0.0.2"
   },
   "engines": {
     "node": "14.x"
