--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fastify/view": "^7.1.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "fs": "^0.0.2"
+    "fs": "^0.0.2",
+    "comparator": "^0.0.1"
   },
   "engines": {
     "node": "14.x"
