--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.1",
     "fastify": "^4.9.2",
     "fs": "^0.0.2",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "html": "^1.0.0"
   },
   "engines": {
     "node": "14.x"
